--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-custom",
+  "name": "@studio-drishti/eslint-config-gaze",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
