--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@studio-drishti/gaze-ui",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
@@ -8,12 +8,12 @@
     "lint": "TIMING=1 eslint \"**/*.ts*\""
   },
   "devDependencies": {
+    "@studio-drishti/tsconfig-gaze": "*",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "eslint": "^7.32.0",
-    "eslint-config-custom": "*",
+    "@studio-drishti/eslint-config-gaze": "*",
     "react": "^18.2.0",
-    "tsconfig": "*",
     "typescript": "^4.5.2"
   }
 }
