--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,17 +1,27 @@
 {
   "name": "@studio-drishti/eslint-config-gaze",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": ".eslintrc.cjs",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^7.23.0",
-    "eslint-config-next": "13.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-config-turbo": "latest"
-  },
-  "devDependencies": {
-    "typescript": "^4.7.4"
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "3.5.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.2.0",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-jest-formatting": "^3.1.0",
+    "eslint-plugin-jsdoc": "^39.6.4",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.17.0",
+    "eslint-plugin-storybook": "^0.6.8",
+    "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-plugin-unicorn": "^45.0.2"
   },
   "publishConfig": {
     "access": "public"
