--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,11 +8,12 @@
     "lint": "TIMING=1 eslint \"**/*.ts*\""
   },
   "devDependencies": {
+    "@studio-drishti/eslint-config-gaze": "*",
     "@studio-drishti/tsconfig-gaze": "*",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "classnames": "^2.3.2",
     "eslint": "^7.32.0",
-    "@studio-drishti/eslint-config-gaze": "*",
     "react": "^18.2.0",
     "typescript": "^4.5.2"
   }
