--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@studio-drishti/gaze-docs",
+  "name": "@gaze/docs",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -7,25 +7,28 @@
     "build": "build-storybook"
   },
   "dependencies": {
+    "@gaze/tokens": "*",
+    "@gaze/ui": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/cli": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/react": "^6.5.15",
+    "@babel/core": "^7.20.12",
+    "@gaze/tokens": "*",
+    "@gaze/tsconfig": "*",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/cli": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
-    "@studio-drishti/gaze-tokens": "*",
-    "@studio-drishti/tsconfig-gaze": "*",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "babel-loader": "^8.3.0",
-    "typescript": "^4.9.3"
+    "@types/node": "18.13.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "babel-loader": "^9.1.2",
+    "typescript": "^4.9.5"
   }
 }
