--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "@studio-drishti/gaze-ui",
+  "name": "@gaze/ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "exports": {
+    "./styles/": "./src/styles/"
+  },
   "license": "MIT",
   "scripts": {
     "lint": "TIMING=1 eslint \"**/*.ts*\""
   },
+  "peerDependencies": {
+    "@gaze/tokens": "*",
+    "classnames": "2.x",
+    "react": "18.x",
+    "react-dom": "18.x"
+  },
   "devDependencies": {
-    "@studio-drishti/eslint-config-gaze": "*",
-    "@studio-drishti/tsconfig-gaze": "*",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@gaze/eslint-config": "*",
+    "@gaze/tsconfig": "*",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "classnames": "^2.3.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.33.0",
     "react": "^18.2.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.9.5"
   }
 }
