--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@studio-drishti/tsconfig-gaze/react-library.json",
-  "include": ["."],
+  "extends": "@gaze/tsconfig/react-library.json",
+  "include": ["src"],
   "exclude": ["dist", "build", "node_modules"]
 }
