feat: added base components

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@gaze/tsconfig/react-library.json",
-  "include": ["src"],
+  "include": ["src", "types.d.ts"],
   "exclude": ["dist", "build", "node_modules"]
 }
