feat: scaffold website

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@gaze/tokens": "*",
-    "@gaze/ui": "*",
+    "@gaze/react": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
