--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@gaze/ui",
+  "name": "@gaze/react",
   "version": "0.0.0",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
+    ".": "./src/index.ts",
     "./styles/": "./src/styles/"
   },
   "license": "MIT",
@@ -24,6 +25,7 @@
     "classnames": "^2.3.2",
     "eslint": "^8.33.0",
     "react": "^18.2.0",
+    "tsup": "6.6.2",
     "typescript": "^4.9.5"
   }
 }
