--- a/apps/jaynielsen/package.json
+++ b/apps/jaynielsen/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gaze/react": "*",
     "@gaze/tokens": "*",
+    "@tabler/icons-react": "2.4.0",
     "classnames": "2.3.2",
     "next": "13.1.6",
     "react": "18.2.0",
