feat: added sidebar component

--- a/apps/jaynielsen/tsconfig.json
+++ b/apps/jaynielsen/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "@gaze/tsconfig/nextjs.json",
+  "include": ["src", "next-env.d.ts"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
