--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gaze",
   "version": "0.0.0",
   "private": true,
+  "license": "MIT",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -10,9 +11,12 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "changeset": "changeset",
+    "release": "turbo build && changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "2.26.0",
     "@gaze/eslint-config": "*",
     "@gaze/tsconfig": "*",
     "eslint-config-turbo": "0.0.7",
