chore: use exact versions

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,12 +26,11 @@
     "@gaze/eslint-config": "*",
     "@gaze/tsconfig": "*",
     "@tabler/icons-react": "2.4.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "classnames": "^2.3.2",
-    "eslint": "^8.33.0",
-    "react": "^18.2.0",
-    "tsup": "6.6.2",
-    "typescript": "^4.9.5"
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "classnames": "2.3.2",
+    "eslint": "8.34.0",
+    "react": "18.2.0",
+    "typescript": "4.9.5"
   }
 }
