--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@gaze/eslint-config": "*",
     "@gaze/tsconfig": "*",
     "eslint-config-turbo": "0.0.7",
-    "prettier": "latest",
-    "turbo": "latest",
-    "webpack": "^5.75.0"
+    "prettier": "2.8.4",
+    "turbo": "1.7.4",
+    "webpack": "5.75.0"
   },
   "engines": {
     "node": ">=14.0.0"
