--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -18,6 +18,6 @@
   },
   "devDependencies": {
     "chokidar-cli": "3.0.0",
-    "style-dictionary": "^3.7.2"
+    "style-dictionary": "3.7.2"
   }
 }
