--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -9,6 +9,6 @@
     "react-library.json"
   ],
   "dependencies": {
-    "typescript-plugin-css-modules": "^4.1.1"
+    "typescript-plugin-css-modules": "4.1.1"
   }
 }
