chore: update package info

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,6 +4,14 @@
   "homepage": "https://github.com/studio-drishti/gaze#readme",
   "license": "MIT",
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:studio-drishti/gaze.git",
+    "directory": "packages/eslint-config"
+  },
   "files": [
     ".eslintrc.cjs"
   ],
@@ -27,8 +35,5 @@
     "eslint-plugin-storybook": "0.6.10",
     "eslint-plugin-testing-library": "5.10.1",
     "eslint-plugin-unicorn": "45.0.2"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
