--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -3,6 +3,14 @@
   "description": "Shareable TypeScript config for Gaze design system projects.",
   "homepage": "https://github.com/studio-drishti/gaze#readme",
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:studio-drishti/gaze.git",
+    "directory": "packages/tsconfig"
+  },
   "files": [
     "base.json",
     "nextjs.json",
