--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "release": "turbo build && changeset publish"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "0.4.8",
     "@changesets/cli": "2.26.0",
     "@gaze/eslint-config": "*",
     "@gaze/tsconfig": "*",
