--- a/apps/jaynielsen/tsconfig.json
+++ b/apps/jaynielsen/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@gaze/tsconfig/nextjs.json",
+  "extends": "@gaze-ui/tsconfig/nextjs.json",
   "include": ["src", "next-env.d.ts", "css-properties.d.ts"],
   "compilerOptions": {
     "baseUrl": ".",
