--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gaze/tokens",
+  "name": "@gaze-ui/tokens",
   "homepage": "https://github.com/studio-drishti/gaze#readme",
   "description": "Gaze design system tokens.",
   "version": "0.1.0",
