--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gaze/tsconfig",
+  "name": "@gaze-ui/tsconfig",
   "description": "Shareable TypeScript config for Gaze design system projects.",
   "homepage": "https://github.com/studio-drishti/gaze#readme",
   "version": "0.1.0",
