--- a/apps/jaynielsen/package.json
+++ b/apps/jaynielsen/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gaze/react": "*",
-    "@gaze/tokens": "*",
+    "@gaze-ui/react": "*",
+    "@gaze-ui/tokens": "*",
     "@next/font": "13.1.6",
     "@tabler/icons-react": "2.4.0",
     "classnames": "2.3.2",
@@ -19,8 +19,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@gaze/eslint-config": "*",
-    "@gaze/tsconfig": "*",
+    "@gaze-ui/eslint-config": "*",
+    "@gaze-ui/tsconfig": "*",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
