--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "devDependencies": {
     "@changesets/changelog-github": "0.4.8",
     "@changesets/cli": "2.26.0",
-    "@gaze/eslint-config": "*",
-    "@gaze/tsconfig": "*",
+    "@gaze-ui/eslint-config": "*",
+    "@gaze-ui/tsconfig": "*",
     "eslint-config-turbo": "0.0.7",
     "prettier": "2.8.4",
     "turbo": "1.7.4",
