--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gaze/react",
+  "name": "@gaze-ui/react",
   "description": "Gaze design system React components.",
   "homepage": "https://github.com/studio-drishti/gaze#readme",
   "version": "0.1.1",
@@ -30,8 +30,8 @@
     "react-dom": "18.x"
   },
   "devDependencies": {
-    "@gaze/eslint-config": "*",
-    "@gaze/tsconfig": "*",
+    "@gaze-ui/eslint-config": "*",
+    "@gaze-ui/tsconfig": "*",
     "@tabler/icons-react": "2.4.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
