--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@changesets/cli": "2.26.0",
     "@gaze-ui/eslint-config": "*",
     "@gaze-ui/tsconfig": "*",
+    "eslint": "8.56.0",
     "eslint-config-turbo": "0.0.7",
     "prettier": "2.8.4",
     "turbo": "1.7.4",
+    "typescript": "5.0.2",
     "webpack": "5.75.0"
   },
   "engines": {
