--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,12 +32,13 @@
   "devDependencies": {
     "@gaze-ui/eslint-config": "*",
     "@gaze-ui/tsconfig": "*",
-    "@tabler/icons-react": "2.4.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "classnames": "2.3.2",
-    "eslint": "8.34.0",
+    "@tabler/icons-react": "2.45.0",
+    "@types/css-modules": "1.0.5",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "classnames": "2.5.1",
+    "eslint": "8.56.0",
     "react": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "5.0.2"
   }
 }
