--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gaze-ui/react": "*",
     "@gaze-ui/tokens": "*",
+    "@tabler/icons-react": "2.46.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
