--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@changesets/changelog-github": "0.4.8",
     "@changesets/cli": "2.26.0",
     "@gaze-ui/eslint-config": "*",
+    "@gaze-ui/stylelint-config": "*",
     "@gaze-ui/tsconfig": "*",
     "eslint": "8.56.0",
     "eslint-config-turbo": "0.0.7",
     "prettier": "2.8.4",
+    "stylelint": "16.1.0",
     "turbo": "1.7.4",
     "typescript": "5.0.2",
     "webpack": "5.75.0"
