--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,13 +31,15 @@
   },
   "devDependencies": {
     "@gaze-ui/eslint-config": "*",
+    "@gaze-ui/stylelint-config": "*",
     "@gaze-ui/tsconfig": "*",
     "@types/css-modules": "1.0.5",
-    "@types/react": "18.2.46",
+    "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "classnames": "2.5.1",
     "eslint": "8.56.0",
     "react": "18.2.0",
-    "typescript": "5.0.2"
+    "stylelint": "16.1.0",
+    "typescript": "5.3.3"
   }
 }
