--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -4,39 +4,38 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "lint": "TIMING=1 eslint \"**/*.{ts,tsx}*\"",
+    "lint": "eslint . --max-warnings 0",
     "preview": "vite preview",
-    "dev": "storybook dev -p 6006",
+    "dev": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
   "dependencies": {
     "@gaze-ui/react": "*",
     "@gaze-ui/tokens": "*",
-    "@tabler/icons-react": "3.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@tabler/icons-react": "3.14.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@gaze-ui/eslint-config": "*",
     "@gaze-ui/tsconfig": "*",
-    "@storybook/addon-essentials": "^8.0.8",
-    "@storybook/addon-interactions": "^8.0.8",
-    "@storybook/addon-links": "^8.0.8",
-    "@storybook/addon-onboarding": "^8.0.8",
-    "@storybook/blocks": "^8.0.8",
-    "@storybook/react": "^8.0.8",
-    "@storybook/react-vite": "^8.0.8",
-    "@storybook/test": "^8.0.8",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
-    "@typescript-eslint/eslint-plugin": "7.7.0",
-    "@typescript-eslint/parser": "7.7.0",
-    "@vitejs/plugin-react": "4.2.1",
-    "eslint": "9.0.0",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.6",
-    "storybook": "^8.0.8",
-    "typescript": "5.4.5",
-    "vite": "5.2.9"
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/node-logger": "8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "eslint": "9.9.1",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.11",
+    "storybook": "^8.2.9",
+    "typescript": "5.5.4",
+    "vite": "5.4.2"
   }
 }
