--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,9 +1,5 @@
 {
   "extends": "@gaze-ui/tsconfig/react-library.json",
-  "include": [
-    "src",
-    "types.d.ts",
-    "../../apps/workshop/src/components/anchor.stories.tsx"
-  ],
+  "include": ["src", "types.d.ts"],
   "exclude": ["dist", "build", "node_modules"]
 }
