--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
+  "packageManager": "npm@10.8.3",
+  "type": "module",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -17,17 +19,17 @@
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.5.0",
-    "@changesets/cli": "2.27.1",
+    "@changesets/cli": "2.27.7",
     "@gaze-ui/eslint-config": "*",
     "@gaze-ui/stylelint-config": "*",
     "@gaze-ui/tsconfig": "*",
-    "eslint": "9.0.0",
-    "eslint-config-turbo": "1.13.2",
-    "prettier": "3.2.5",
-    "stylelint": "16.3.1",
-    "turbo": "1.13.2",
-    "typescript": "5.4.5",
-    "webpack": "5.91.0"
+    "eslint": "9.9.1",
+    "eslint-config-turbo": "2.1.0",
+    "prettier": "3.3.3",
+    "stylelint": "16.9.0",
+    "turbo": "2.1.0",
+    "typescript": "5.5.4",
+    "webpack": "5.94.0"
   },
   "engines": {
     "node": ">=14.0.0"
