--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://github.com/studio-drishti/gaze#readme",
   "license": "MIT",
   "version": "0.1.0",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
@@ -13,27 +14,25 @@
     "directory": "packages/eslint-config"
   },
   "files": [
-    ".eslintrc.cjs"
+    "eslint.config.js"
   ],
-  "main": ".eslintrc.cjs",
+  "main": "eslint.config.js",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "7.7.0",
-    "@typescript-eslint/parser": "7.7.0",
+    "@eslint/js": "9.9.1",
+    "@types/eslint__js": "8.42.3",
+    "@types/node": "22.5.1",
     "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jest": "28.2.0",
-    "eslint-plugin-jest-dom": "5.2.0",
-    "eslint-plugin-jest-formatting": "3.1.0",
-    "eslint-plugin-jsdoc": "48.2.3",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-sonarjs": "0.25.1",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-n": "17.10.2",
+    "eslint-plugin-perfectionist": "3.3.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-sonarjs": "2.0.2",
     "eslint-plugin-storybook": "0.8.0",
-    "eslint-plugin-testing-library": "6.2.2",
-    "eslint-plugin-unicorn": "52.0.0"
+    "eslint-plugin-unicorn": "55.0.0",
+    "globals": "15.9.0",
+    "typescript-eslint": "8.3.0"
   }
 }
