--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,24 +22,26 @@
   },
   "license": "MIT",
   "scripts": {
-    "lint": "TIMING=1 eslint \"**/*.{ts,tsx}*\""
+    "lint": "eslint . --max-warnings 0"
   },
   "peerDependencies": {
     "classnames": "2.x",
     "react": "18.x",
     "react-dom": "18.x"
   },
+  "type": "module",
   "devDependencies": {
     "@gaze-ui/eslint-config": "*",
     "@gaze-ui/stylelint-config": "*",
     "@gaze-ui/tsconfig": "*",
     "@types/css-modules": "1.0.5",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
     "classnames": "2.5.1",
-    "eslint": "9.0.0",
-    "react": "18.2.0",
-    "stylelint": "16.3.1",
-    "typescript": "5.4.5"
+    "eslint": "9.9.1",
+    "react": "18.3.1",
+    "stylelint": "16.9.0",
+    "typescript": "5.5.4",
+    "typescript-eslint": "8.3.0"
   }
 }
