--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -56,8 +56,5 @@
   "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
 
   // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "node",
-  "remoteEnv": {
-    "ESLINT_USE_FLAT_CONFIG": "false"
-  }
+  "remoteUser": "node"
 }
