feat: link overlay

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,7 +47,7 @@
   "portsAttributes": {
     "6006": {
       "label": "Storybook",
-      "onAutoForward": "silent"
+      "onAutoForward": "openBrowserOnce"
     }
   },
 
