--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -13,7 +13,7 @@
   },
   "files": [
     "base.json",
-    "nextjs.json",
+    "react-app.json",
     "react-library.json"
   ],
   "dependencies": {
