chore: fix lint errors

--- a/apps/workshop/tsconfig.json
+++ b/apps/workshop/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@gaze-ui/tsconfig/react-library.json",
-  "include": ["src"],
+  "include": ["src", ".storybook/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
