--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --max-warnings 0",
     "preview": "vite preview",
     "dev": "storybook dev -p 6006 --no-open",
-    "build": "storybook build"
+    "build": "storybook build -o dist"
   },
   "dependencies": {
     "@gaze-ui/react": "*",
