--- a/packages/tokens/config.json
+++ b/packages/tokens/config.json
@@ -4,9 +4,10 @@
     "css": {
       "transforms": [
         "attribute/cti",
-        "name/cti/kebab",
+        "name/kebab",
         "size/pxToRem",
-        "color/css"
+        "color/css",
+        "fontFamily/css"
       ],
       "buildPath": "dist/css/",
       "files": [
