chore: bundle with tsup

--- a/packages/react/.stylelintrc.json
+++ b/packages/react/.stylelintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["@gaze-ui/stylelint-config"]
+  "extends": ["@gaze-ui/stylelint-config"],
+  "ignoreFiles": ["**/dist/**", "**/node_modules/**"]
 }
