--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,33 +3,41 @@
   "description": "Gaze design system React components.",
   "homepage": "https://github.com/studio-drishti/gaze#readme",
   "version": "0.5.0",
-  "publishConfig": {
-    "access": "public"
-  },
+  "license": "MIT",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git@github.com:studio-drishti/gaze.git",
     "directory": "packages/react"
   },
   "files": [
-    "src/**"
+    "dist/**"
   ],
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
   "exports": {
-    ".": "./src/index.ts",
-    "./styles/": "./src/styles/"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./styles.css": "./dist/index.css",
+    "./src": {
+      "types": "./src/index.ts",
+      "import": "./src/index.ts"
+    },
+    "./src/styles.css": "./src/styles.css"
   },
-  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "build": "tsup"
   },
   "peerDependencies": {
     "classnames": "2.x",
     "react": "18.x",
     "react-dom": "18.x"
   },
-  "type": "module",
   "devDependencies": {
     "@gaze-ui/eslint-config": "*",
     "@gaze-ui/stylelint-config": "*",
@@ -39,8 +47,11 @@
     "@types/react-dom": "18.3.0",
     "classnames": "2.5.1",
     "eslint": "9.11.1",
+    "postcss": "8.4.47",
+    "postcss-modules": "6.0.0",
     "react": "18.3.1",
     "stylelint": "16.9.0",
+    "tsup": "8.3.0",
     "typescript": "5.6.2",
     "typescript-eslint": "8.8.0"
   }
